--- a/optify/src/App.scss
+++ b/optify/src/App.scss
@@ -1,10 +1,6 @@
+@import "~bootstrap/scss/bootstrap";
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -24,15 +20,187 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+// ---------------------------- VARIABLES ----------------------------------
+
+$secondaryColor: #e44e2b;
+$numberWidth: 200px;
+$marginTopSteps: $numberWidth * 0.6;
+$tableBorderRadius: 30px;
+$tableShadow: 0px 0px 10px rgba(114, 114, 113, 0.5);
+
+* {
+  font-family: "Segoe UI", sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+// --------------------------- NAVBAR --------------------------------------
+
+#navigation-bar {
+  font-size: 2rem !important;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  background-color: #43419e;
+  color: white;
+  height: 10vh;
+  width: 100vw;
+}
+
+#bottom-NavBar {
+  background-color: white;
+  height: 8vh;
+  width: 100vw;
+}
+
+#navbar-brand {
+  color: white;
+  font-size: 2rem !important;
+}
+
+.nav-link {
+  color: black;
+  font-size: 26px;
+  padding-top: 2rem;
+  position: relative;
+
+  &::after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 5px;
+    left: 50%;
+    position: absolute;
+    background: $secondaryColor;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  &:hover {
+    color: black;
+
+    &::after {
+      width: 85%;
+      left: 7.5%;
+      background: $secondaryColor;
+    }
   }
+}
+
+.active-link {
+  color: black;
+  position: relative;
+  &::after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 5px;
+    width: 85%;
+    left: 7.5%;
+    position: absolute;
+    background: $secondaryColor;
+    // transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    // width: 0;
+  }
+}
+
+// ---------------------------------------------- DEMO ------------------------------------------------
+
+.demo-number-wrapper {
+  font-weight: bolder;
+  font-family: "Segoe UI", sans-serif;
+  width: $numberWidth;
+  height: $numberWidth;
+  background-color: #f4f3f9;
+  border-radius: $numberWidth/2;
+  margin-top: $marginTopSteps;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.demo-number {
+  text-align: center;
+  padding: 2rem;
+  font-size: 7rem;
+  font-weight: bold;
+  color: $secondaryColor;
+}
+
+.row-demo-steps {
+  $margin: calc(10vw - 15px);
+  padding-left: $margin !important;
+  padding-right: $margin !important;
+}
+
+.page-title {
+  font-size: 110px;
+}
+
+.margin-top-steps {
+  margin-top: $marginTopSteps + 10px;
+}
+
+#results-variables {
+  width: 100%;
+}
+
+.stepDescription {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.stepSubtitle {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.response-table {
+  width: 450px !important;
+  border-collapse: collapse;
+  // border-radius: $tableBorderRadius;
+  border-bottom-left-radius: $tableBorderRadius;
+  border-bottom-right-radius: $tableBorderRadius;
+  margin: 40px;
+  overflow: hidden;
+  box-shadow: $tableShadow;
+  font-size: 1.6rem;
+}
+
+.response-table-head {
+  background-color: $secondaryColor;
+  color: white;
+
+  & > th:nth-child(1) {
+    border-right: none;
+  }
+
+  & > th:nth-child(2) {
+    border-left: none;
+  }
+}
+
+.response-table-body {
+  & > tr {
+    border: none;
+
+    & > td {
+      border: none;
+      padding: 8px 15px 8px 30px;
+      &:first-child {
+        text-align: start;
+      }
+    }
+
+    &:last-child > td {
+      padding: 8px 15px 28px 30px;
+    }
+  }
+
+  & > tr:first-child {
+    border-bottom: 2px solid rgb(219, 219, 219);
+  }
+
+  // border-bottom-right-radius: $tableBorderRadius;
+  // border-bottom-left-radius: $tableBorderRadius;
+  // border-radius: $tableBorderRadius;
 }
